# KPI-CompGraphics

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
Lab1/: .env  Cargo.toml  README.md
Lab1/src/: config.rs  context.rs  logger.rs  main.rs  models.rs  ui.rs
Lab1/src/error/: env.rs
Lab1/src/models/: circle.rs  grid.rs  line.rs  model.rs  point.rs  screen_params.rs
Lab1/src/transformations/: affine.rs  euclidean.rs  projective.rs  resize.rs  resizing.rs
Lab1/src/ui/: app.rs  app_model.rs  components.rs  core.rs  main_window.rs
Lab1/src/ui/components/: canvas.rs  settings.rs
Lab1/src/ui/elements/: canvas.rs
Lab1/src/ui/windows/: main_window.rs
Lab1/src/utils/: egui.rs
Lab2/: .env  Cargo.toml  README.md
Lab2/src/: config.rs  context.rs  logger.rs  main.rs  models.rs
Lab2/src/math/: angle.rs  derivative.rs  vector.rs
Lab2/src/models/: dot.rs  grid.rs  line.rs  model.rs  point.rs  screen.rs
Lab2/src/operations/: animation.rs  curve_point.rs  curve_props.rs  offset.rs  rotate.rs
Lab2/src/ui/: app.rs
Lab2/src/ui/components/: canvas.rs  settings.rs
Lab2/src/ui/styles/: colors.rs  strokes.rs
Lab2/src/ui/windows/: main_window.rs
Lab3/: .env  Cargo.toml  README.md
Lab3/src/: context.rs  main.rs
Lab3/src/geometry/: line.rs  moveable_point.rs  point.rs
Lab3/src/graphics/: grid.rs  screen.rs
Lab3/src/models/: animation.rs  bezier_curve.rs  bezier_point.rs  model.rs
Lab3/src/operations/: animation.rs  offset.rs  rotation.rs
Lab3/src/traits/: positionable.rs
Lab3/src/ui/: app.rs
Lab3/src/ui/components/: canvas.rs  settings.rs
Lab3/src/ui/styles/: colors.rs  strokes.rs
Lab4/: .env  Cargo.toml  README.md
Lab4/src/: context.rs  main.rs
Lab4/src/geometry/: moveable_point.rs  point.rs
Lab4/src/graphics/: grid.rs  screen.rs
Lab4/src/math/: vector.rs
Lab4/src/models/: bezier_curve.rs  bezier_point.rs  model.rs
Lab4/src/operations/: rotation.rs
Lab4/src/traits/: positionable.rs
Lab4/src/ui/components/: canvas.rs  settings.rs
Lab4/src/ui/styles/: colors.rs  strokes.rs
Lab5/: .env  Cargo.toml  README.md
Lab5/src/: context.rs  main.rs
Lab5/src/geometry/: line.rs  line3d.rs  point.rs  point2d.rs  point3d.rs
Lab5/src/graphics/: axes.rs  grid.rs  model.rs  screen.rs
Lab5/src/math/: angle.rs
Lab5/src/operations/: animation.rs
Lab5/src/projections/: orthographic.rs  trimetric.rs
Lab5/src/transformations/: offset.rs  rotation.rs
Lab5/src/ui/components/: canvas.rs  settings.rs
Lab5/src/ui/styles/: strokes.rs
Lab6/: .env  Cargo.toml  README.md
Lab6/src/: context.rs  main.rs
Lab6/src/errors/: texture.rs
Lab6/src/geometry/: line2d.rs  point2d.rs  point3d.rs
Lab6/src/graphics/: model.rs  screen.rs
Lab6/src/math/: pivot.rs
Lab6/src/model/: surface.rs  texture.rs
Lab6/src/operations/: animation.rs
Lab6/src/transformations/: offset.rs  rotation.rs
Lab6/src/ui/: app.rs
Lab6/src/ui/components/: canvas.rs  message_box.rs  settings.rs
Lab6/src/ui/styles/: strokes.rs
Lab6/src/ui/windows/: main.rs
Lab7/: .env  Cargo.toml
Lab7-IFS/: .env  Cargo.toml  README.md
Lab7-IFS/examples/: Barnsleys-Fern.csv  Binary.csv  Coral.csv  Crystal.csv  Dragon.csv  Floor.csv  Koch-3.csv  Spiral.csv  Tree.csv  Triangle.csv  Whirlpool.csv  Zigzag.csv
Lab7-IFS/src/: context.rs  main.rs
Lab7-IFS/src/errors/: file_loader.rs  validation.rs
Lab7-IFS/src/fractal/: dot.rs  examples.rs  file_loader.rs  model.rs  state.rs  system.rs  validator.rs  view.rs
Lab7-IFS/src/ui/: core.rs  screenshot.rs
Lab7-IFS/src/ui/components/: canvas.rs  settings.rs
Lab7-IFS/src/ui/windows/: ifs_settings.rs  main.rs  message.rs
Lab7-IFS/src/ui/windows/traits/: window_ops.rs
Lab7-L-System/: .env  Cargo.toml  README.md
Lab7-L-System/examples/: HilbertCurve.txt  KochSnowflake.txt  LsystemBush-2.txt  SierpinskiCurve.txt  SierpinskiTriangle.txt
Lab7-L-System/src/: logger.rs
Lab7-L-System/src/errors/: log.rs  validation.rs
Lab7-L-System/src/graphics/: screen.rs
Lab7-L-System/src/model/: examples.rs  fractal.rs
Lab7-L-System/src/ui/components/: settings.rs
Lab7-L-System/src/ui/styles/: strokes.rs
Lab7-L-System/src/ui/windows/: message.rs
Lab7/examples/: DragonCurve.txt  GosperCurve.txt  HilbertCurve.txt  KochCurve.txt  KochQuadraticCurve.txt  KochQuadraticSnowflake.txt  KochSnowflake.txt  LsystemBush-1.txt  LsystemBush-2.txt  LsystemBush-3.txt  LsystemSticks-1.txt  LsystemSticks-2.txt  PeanoFractal.txt  PenroseTiling.txt  SierpinskiCurve.txt  SierpinskiRhombus.txt  SierpinskiTriangle.txt  SierpinskisCurve.txt  SierpinskisRhombus.txt  SierpinskisTriangle.txt
Lab7/src/: config.rs  context.rs  main.rs
Lab7/src/errors/: loader.rs  validation.rs
Lab7/src/geometry/: line2d.rs  point2d.rs
Lab7/src/graphics/: grid.rs  screen.rs
Lab7/src/math/: angle.rs
Lab7/src/model/: fractal.rs  loader.rs  validator.rs  view.rs
Lab7/src/ui/components/: canvas.rs  settings.rs
Lab7/src/ui/styles/: colors.rs  strokes.rs
