[package]
name = "Lab1"
version = "0.1.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.81"

[dependencies]
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
fern = "0.6.2"
log = "0.4.22"