[package]
name = "Lab1"
version = "0.1.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.81"

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["default"] }
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.6.2"
log = "0.4.22"
nalgebra = "0.33.0"
thiserror = "1.0.64"