[package]
name = "Lab3"
version = "1.0.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
chrono = "0.4.38"             # Logging purposes.
dotenvy = "0.15.7"            # .env file processing.
egui = "0.29.1"               # GUI Library.
egui_extras = { version = "0.29.1", features = ["default"] }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.7.0"                # Logger.
log = "0.4.22"                # Logging facade.
nalgebra = "0.33.1"           # Matrices, linear algebra.
thiserror = "1.0.64"          # Custom enum errors.
uuid = { version = "1.11.0", features = [
    "v4",                     # Lets you generate random UUIDs.
    "fast-rng",               # Use a faster (but still sufficiently random) RNG.
    "macro-diagnostics",      # Enable better diagnostics for compile-time UUIDs.
] }