[package]
name = "Lab4"
version = "1.0.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.84"

[dependencies]
chrono = "0.4.39"             # Logging purposes.
dotenvy = "0.15.7"            # .env file processing.
egui = "0.30.0"               # GUI Library.
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.7.1"                # Logger.
log = "0.4.25"                # Logging facade.
nalgebra = "0.33.2"           # Matrices, linear algebra.
thiserror = "2.0.11"          # Custom enum errors.
uuid = { version = "1.12.1", features = [
    "v4",                     # Lets you generate random UUIDs.
    "fast-rng",               # Use a faster (but still sufficiently random) RNG.
    "macro-diagnostics",      # Enable better diagnostics for compile-time UUIDs.
] }