[package]
name = "Lab6"
version = "1.0.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
chrono = "0.4.38"             # Logging purposes.
dotenvy = "0.15.7"            # .env file processing.
egui = "0.29.1"               # GUI Library.
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.7.0"                # Logger.
log = "0.4.22"                # Logging facade.
nalgebra = "0.33.2"           # Matrices, linear algebra.
regex = "1.11.1"              # Regular Expressions.
rfd = "0.15.1"                # File Dialogs.
thiserror = "2.0.3"           # Custom enum errors.
