[package]
name = "Lab7-IFS"
version = "1.0.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.84"

[dependencies]
chrono = "0.4.39"             # Logging purposes.
csv = "1.3.1"                 # Fast CSV parsing with support for serde.
dotenvy = "0.15.7"            # .env file processing.
egui = "0.30.0"               # GUI Library.
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.7.1"                # Logger.
image = "0.25.5"              # Imaging library.
indoc = "2.0.5"               # Indented document literals
log = "0.4.25"                # Logging facade.
nalgebra = "0.33.2"           # Matrices, linear algebra.
rand = "0.9.0"                # Random number generators and other randomness functionality.
rfd = "0.15.2"                # File Dialogs.
strum_macros = "0.26.4"       # Helpful macros for working with enums and strings
thiserror = "2.0.11"           # Custom enum errors.
