[package]
name = "Lab7-L-System"
version = "1.0.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.84"

[dependencies]
chrono = "0.4.39"             # Logging purposes.
dotenvy = "0.15.7"            # .env file processing.
egui = "0.30.0"               # GUI Library.
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.7.1"                # Logger.
image = "0.25.5"              # Imaging library.
indoc = "2.0.5"               # Indented document literals
log = "0.4.25"                # Logging facade.
nalgebra = "0.33.2"           # Matrices, linear algebra.
rfd = "0.15.2"                # File Dialogs.
strum_macros = "0.26.4"       # Helpful macros for working with enums and strings
thiserror = "2.0.11"           # Custom enum errors.
