[package]
name = "Lab7"
version = "0.1.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
chrono = "0.4.38"             # Logging purposes.
dotenvy = "0.15.7"            # .env file processing.
egui = "0.29.1"               # GUI Library.
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.7.0"                # Logger.
indoc = "2.0.5"               # Indented document literals
log = "0.4.22"                # Logging facade.
nalgebra = "0.33.2"           # Matrices, linear algebra.
thiserror = "2.0.3"           # Custom enum errors.
